--- a/habittracker/package.json
+++ b/habittracker/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.8.2",
     "react": "^19.0.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0"
   },
@@ -26,7 +27,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.0.12",
+    "tailwindcss": "^3.4.17",
     "vite": "^6.2.0"
   }
 }
