--- a/habittracker/package.json
+++ b/habittracker/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.8.2",
     "chart.js": "^4.4.8",
+    "framer-motion": "^12.5.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-confetti": "^6.4.0",
