--- a/habittracker/package.json
+++ b/habittracker/package.json
@@ -14,6 +14,7 @@
     "chart.js": "^4.4.8",
     "framer-motion": "^12.5.0",
     "react": "^19.0.0",
+    "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-confetti": "^6.4.0",
     "react-dom": "^19.0.0",
